# depi_pi05

./: .gitignore  README.md  finetune_pi05.sh  inference.sh  pyproject.toml  rabc.sh
docs/source/: getting_started_real_world_robot.md
examples/: pi0_reward_alignment_smoke.py  test_gvl_reward.py
lerobot/common/datasets/: _shared_mixins.py  factory.py  lerobot_dataset.py  lerobot_dataset_v3.py  utils.py
lerobot/common/datasets/conversion_script/: batch_convert_dataset_v1_to_v2.py
lerobot/common/datasets/v21/: dataset_tools.py
lerobot/common/datasets/v3/: aggregate.py  dataset_tools.py
lerobot/common/motors/: motors_bus.py
lerobot/common/policies/: __init__.py  factory.py
lerobot/common/policies/pi0/: configuration_pi0.py  modeling_pi0.py
lerobot/common/policies/pi05/: configuration_pi05.py  modeling_pi05.py  processor_pi05.py
lerobot/common/processor/: hil_processor.py  joint_observations_processor.py  normalize_processor.py  policy_robot_bridge.py
lerobot/common/reward_models/: __init__.py  gvl_reward.py  qwen_vl.py
lerobot/common/teleoperators/: teleoperator.py  utils.py
lerobot/common/teleoperators/homunculus/: homunculus_arm.py  homunculus_glove.py
lerobot/common/teleoperators/keyboard/: teleop_keyboard.py
lerobot/common/teleoperators/koch_leader/: koch_leader.py
lerobot/common/teleoperators/phone/: teleop_phone.py
lerobot/common/teleoperators/so100_leader/: so100_leader.py
lerobot/common/teleoperators/so101_leader/: so101_leader.py
lerobot/common/utils/: train_utils.py  utils.py
lerobot/configs/: policies.py  train.py  types.py
lerobot/scripts/: accelerate_train.py  annotate_instruction_rewards.py
opengvl/clients/: qwen.py
opengvl/utils/: __init__.py  images.py  logging_config.py  metrics.py
scripts/: __init__.py  apply_transformers_patches.py  apply_transformers_patches.sh
